party 가입,탈퇴 repository 방법으로 수정